--- a/summary.html
+++ b/summary.html
@@ -25,12 +25,15 @@ implementation by
 then of Karlsruhe University, and
 <a href="http://www.math.uni-duesseldorf.de/~stoll/">Michael Stoll</a>,
 then of Munich University, both in Germany.
-It mostly supports the Lisp described in the
+It supports the Lisp described in the
 <a href="http://www.lisp.org/HyperSpec/FrontMatter/">ANSI Common Lisp
-standard</a>.</p>
+standard</a> plus many extensions.</p>
 
 <p><a href="http://clisp.cons.org/">CLISP</a> includes an interpreter,
-a compiler, <a href="impnotes.html#clos-diff">almost all</a> of CLOS,
+a compiler, a debugger,
+a <a href="http://www.lisp.org/mop/">MOP</a>ish
+ <a href="http://www.lisp.org/HyperSpec/Body/chap-7.html">CLOS</a>
+ implementation,
 a <a href="impnotes.html#dffi">foreign language interface</a> and
 a <a href="impnotes.html#socket">socket interface</a>.
 An <a href="http://www.the-labs.com/X11/XLib-Manual/">X11</a> interface
@@ -44,7 +47,7 @@ Command line editing is provided by
  most Unix workstations (Linux, FreeBSD, NetBSD, OpenBSD, Solaris,
  Tru64, HP-UX, BeOS, NeXTstep, IRIX, AIX and others) and on
  other systems (Windows NT/2000/XP, Windows 95/98/ME)
- and needs only 2 MB of RAM.</p>
+ and needs only 4 MB of RAM.</p>
 
 <p><a href="http://clisp.cons.org/">CLISP</a> is
 <a href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>
