fix some links, drop PUNIMAX

--- a/resources.html
+++ b/resources.html
@@ -47,7 +47,7 @@
    its FFI and module facilities</dd>
 </dl>
 
-<h1>About Lisp in general</h1>
+<h1 id="about">About Lisp in general</h1>
 
 <p><a href="http://www.ai.mit.edu/docs/articles/good-news/good-news.html"
       >Lisp: Good News, Bad News, How to Win Big</a>
@@ -57,16 +57,17 @@
 the job</a> [<a href="http://www.podval.org/~sds/">Sam Steingold</a>]</p>
 
 <p><a href="http://www.apl.jhu.edu/~hall/lisp.html">An Introduction and
-  Tutorial for Common Lisp</a> [<a href="hall@apl.jhu.edu">Marty Hall</a>]</p>
+  Tutorial for Common Lisp</a>
+ [<a href="mailto:hall@apl.jhu.edu">Marty Hall</a>]</p>
 
 <p><a href="http://www.n-a-n-o.com/lisp/cmucl-tutorials/LISP-tutorial.html"
       >Common LISP Hints</a> - also comes with the CLISP distribution
- as <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/doc/LISP-tutorial.txt?rev=HEAD"><code>doc/LISP-tutorial.txt</code></a>
+ as <a href="http://cvs.sourceforge.net/viewcvs.py/*checkout*/clisp/clisp/doc/LISP-tutorial.txt?rev=HEAD"><code>doc/LISP-tutorial.txt</code></a>
  in plain text format.</p>
 
 <p><a href="http://www.aiai.ed.ac.uk/~jeff/clos-guide.html">A Brief
   Guide to CLOS</a> - also comes with the CLISP distribution
- as <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/doc/CLOS-guide.txt?rev=HEAD"><code>doc/CLOS-guide.txt</code></a>
+ as <a href="http://cvs.sourceforge.net/viewcvs.py/*checkout*/clisp/clisp/doc/CLOS-guide.txt?rev=HEAD"><code>doc/CLOS-guide.txt</code></a>
  in plain text format.</p>
 
 <p><a href="http://www.pascalcostanza.de/lisp/guide.html">Highly
@@ -142,24 +143,23 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
  <dt><strong>Miscellaneous</strong></dt>
   <dd><dl>
    <dt id="packages"><strong>packages</strong></dt>
-    <dd><a href="ftp://cvs2.cons.org/pub/lisp/clisp/packages/"
-                >ftp://cvs2.cons.org/pub/lisp/clisp/packages/</a><br/>
+    <dd><!--a href="ftp://cvs2.cons.org/pub/lisp/clisp/packages/"
+                >ftp://cvs2.cons.org/pub/lisp/clisp/packages/</a><br/-->
         <a href="ftp://ftp.gnu.org/pub/gnu/clisp/packages/"
                 >ftp://ftp.gnu.org/pub/gnu/clisp/packages/</a><br/>
         <a href="http://ftp.gnu.org/pub/gnu/clisp/packages/"
                 >http://ftp.gnu.org/pub/gnu/clisp/packages/</a></dd>
    <dt id="contrib"><strong>contrib</strong></dt>
-    <dd><a href="ftp://cvs2.cons.org/pub/lisp/clisp/contrib/"
-                >ftp://cvs2.cons.org/pub/lisp/clisp/contrib/</a><br/>
+    <dd><!--a href="ftp://cvs2.cons.org/pub/lisp/clisp/contrib/"
+                >ftp://cvs2.cons.org/pub/lisp/clisp/contrib/</a><br/-->
         <a href="ftp://ftp.gnu.org/pub/gnu/clisp/contrib/"
                 >ftp://ftp.gnu.org/pub/gnu/clisp/contrib/</a><br/>
         <a href="http://ftp.gnu.org/pub/gnu/clisp/contrib/"
                 >http://ftp.gnu.org/pub/gnu/clisp/contrib/</a></dd></dl></dd>
- <dt><strong>SLIK</strong> GUI toolkit [Ira Kalet]</dt>
-  <dd><a href="ftp://ftp.radonc.washington.edu/pub/slik/"
-              >ftp://ftp.radonc.washington.edu/pub/slik/</a><br/>
-   <a href="http://www.radonc.washington.edu/medinfo/prism/"
-           >http://www.radonc.washington.edu/medinfo/prism/</a></dd>
+ <dt><strong>SLIK</strong> GUI toolkit
+  [<a href="mailto:ikalet@u.washington.edu">Ira Kalet</a>]</dt>
+  <dd><a href="http://www.radonc.washington.edu/medinfo/prism/"
+         >http://www.radonc.washington.edu/medinfo/prism/</a></dd>
  <dt><strong>Garnet</strong> GUI toolkit
     [Brad A. Myers, Andrew Mickish et al]</dt>
   <dd><a href="http://www.cs.cmu.edu/afs/cs.cmu.edu/project/garnet/www/garnet-home.html">http://www.cs.cmu.edu/afs/cs.cmu.edu/project/garnet/www/garnet-home.html</a><br/>
@@ -184,10 +184,6 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
    <a href="mailto:moore@cs.utexas.edu">J Strother Moore</a>]</dt>
   <dd><a href="http://www.cs.utexas.edu/users/moore/acl2/"
               >http://www.cs.utexas.edu/users/moore/acl2/</a></dd>
- <dt><strong>Punimax</strong>, a rather antiquated computer algebra system</dt>
-  <dd><a href="ftp://tsx-11.mit.edu/pub/linux/packages/lisp/"
-              >ftp://tsx-11.mit.edu/pub/linux/packages/lisp/</a><br/>
-  <a href="http://www.riaca.win.tue.nl/archive/can/Systems_and_Packages/Per_Purpose/General/PUNIMAX.html">http://www.riaca.win.tue.nl/archive/can/Systems_and_Packages/Per_Purpose/General/PUNIMAX.html</a></dd>
  <dt><strong>New Millenium Space Flight Mission</strong>
      [<a href="http://www.flownet.com/gat/">Erann Gat</a>]</dt>
   <dd>(They chose Harlequin CL for the space flight, with CLISP as
@@ -199,8 +195,7 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
   <dd><a href="http://store.yahoo.com/">http://store.yahoo.com/</a></dd>
  <dt><strong>xindy</strong> - the fleXible INDexing sYstem
      [<a href="mailto:jschrod@acm.org">Joachim Schrod</a>]</dt>
-  <dd><a href="http://www.iti.informatik.th-darmstadt.de/xindy/"
-              >http://www.iti.informatik.th-darmstadt.de/xindy/</a><br/>
+  <dd><a href="http://www.xindy.org/">http://www.xindy.org/</a><br/>
       <a href="http://sourceforge.net/projects/xindy/"
               >http://sourceforge.net/projects/xindy/</a></dd>
  <dt><strong>PLaSM</strong> - a functional design language for computing
@@ -225,7 +220,7 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
  <dd><a href="http://alvin.jpl.nasa.gov/gat/ftp/http.lsp"
              >http://alvin.jpl.nasa.gov/gat/ftp/http.lsp</a></dd>
  <dt><strong>Oracle</strong> and <strong>FastCGI</strong> modules
-  [<a href="http://www.alma.com/staff/hin">John K. Hinsdale</a>]</dt>
+  [<a href="http://www.alma.com/staff/hin/">John K. Hinsdale</a>]</dt>
  <dd><a href="http://clisp.alma.com/">http://clisp.alma.com/</a>
   (distributed with CLISP)</dd>
  <dt><strong>Screamer</strong> - an extension of Common Lisp that adds
@@ -248,8 +243,8 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
         >http://www.stud.uni-karlsruhe.de/~unk6/closure/</a></dd>
  <dt><strong>CMN (Common Music Notation)</strong>
   [<a href="mailto:bil@ccrma.stanford.edu">Bill Schottstaedt</a>]</dt>
- <dd><a href="http://ccrma-www.stanford.edu/software/cmn/"
-        >http://ccrma-www.stanford.edu/software/cmn/</a></dd>
+ <dd><a href="http://ccrma.stanford.edu/software/cmn/"
+        >http://ccrma.stanford.edu/software/cmn/</a></dd>
  <dt><strong>The GTK-server</strong></dt>
  <dd><a href="http://www.turtle.dds.nl/gtk-server/"
         >http://www.turtle.dds.nl/gtk-server/</a></dd>
@@ -291,9 +286,9 @@ Applications</a> page at <a href="http://www.lisp.org/">ALU</a>.</p>
     <a href="http://matlisp.sourceforge.net/">home</a>]</dt>
   <dd>a package for Common Lisp for handling matrices with real-valued
    or complex-valued elements.
-   <a href="http://www.netlib.org/blas">BLAS</a> is used for elementary
+   <a href="http://www.netlib.org/blas/">BLAS</a> is used for elementary
    matrix operations and
-   <a href="http://www.netlib.org/lapack">LAPACK</a> is used for linear
+   <a href="http://www.netlib.org/lapack/">LAPACK</a> is used for linear
    algebra routines.</dd>
  <dt><strong>Common Lisp ORB</strong>
    [<a href="http://sourceforge.net/projects/clorb">project</a>
