--- a/resources.html
+++ b/resources.html
@@ -252,6 +252,10 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
   and purely non-commutative graded algebras</dt>
  <dd><a href="http://servus.math.su.se/bergman/"
         >http://servus.math.su.se/bergman/</a></dd>
+ <dt><strong>Ltk - The Lisp Toolkit</strong>
+  [<a href="http://www.peter-herth.de">Peter Herth</a>]</dt>
+ <dd><a href="http://www.peter-herth.de/ltk/"
+        >http://www.peter-herth.de/ltk/</a></dd>
 </dl>
 
 <p>See also the
