the reasons for base being the default linkset http://article.gmane.org/gmane.lisp.clisp.general:8691

--- a/faq.html
+++ b/faq.html
@@ -400,6 +400,9 @@ head (reasonably recent).</p>
 <p>In the <code>full</code> linking set.  Run CLISP like this:
 <code>clisp <a href="clisp.html#opt-link-set">-K</a> full</code>.</p>
 
+<p>The reasons for <code>base</code> being the default are explained
+ <a href="http://article.gmane.org/gmane.lisp.clisp.general:8691">here</a>.</p>
+
 <p><a href="#run">back to Running</a></p><hr/>
 
 <h3 id="gui">How do I create a GUI for my CLISP program?</h3>
