--- a/faq.html
+++ b/faq.html
@@ -293,7 +293,7 @@ promotes charitable donations to Uganda.</p>
 
 <p><a href="#meta">back to Meta</a></p><hr/>
 
-<p><a href="#index">index</a></p><hr/>
+<p><a href="#index">top-level index</a></p><hr/>
 
 <h3 id="contrib">I want to help!</h3>
 
@@ -314,7 +314,7 @@ head (reasonably recent).</p>
 
 <p><a href="#meta">back to Meta</a></p><hr/>
 
-<p><a href="#index">index</a></p><hr/>
+<p><a href="#index">top-level index</a></p><hr/>
 
 <h2 id="run">Running CLISP</h2>
 <ol>
@@ -412,7 +412,7 @@ head (reasonably recent).</p>
 
 <p><a href="#run">back to Running</a></p><hr/>
 
-<p><a href="#index">index</a></p><hr/>
+<p><a href="#index">top-level index</a></p><hr/>
 
 <h2 id="trouble">Troubles</h2>
 
@@ -421,7 +421,8 @@ head (reasonably recent).</p>
 character #\u00B3 cannot be represented in the character set CHARSET:ASCII</a></li>
  <li><a href="#rl-tab">Display all 1259 possibilities? (y or n)</a></li>
  <li><a href="#stack">stack overflow</a></li>
- <li><a href="#self-mod">self-modifying code</a></li>
+ <li><a href="#self-mod">self-modifying code</a> - a common
+  CLISP-independent beginner mistake</li>
 </ol>
 <hr/>
 
@@ -456,9 +457,9 @@ character #\u00B3 cannot be represented in the character set CHARSET:ASCII</h3>
 
 <h3 id="stack">stack overflow</h3>
 
-<p>CLISP has <a href="impnotes.html#vm"><em>two</em> stacks</a>, the
- "program stack" and the "lisp stack", and both may occasionally
- overflow.</p>
+<p>CLISP has <a href="impnotes.html#vm"><em>two</em> stacks</a>,
+ the <cite>"program stack"</cite> and the <cite>"lisp stack"</cite>,
+ and both may occasionally overflow.</p>
 
 <h4>Avoiding stack overflow: Generic</h4>
 <ul><li>You will always get a stack overflow when you try to
@@ -496,8 +497,6 @@ character #\u00B3 cannot be represented in the character set CHARSET:ASCII</h3>
 
 <p><a href="#trouble">back to Troubles</a></p><hr/>
 
-<p><a href="#index">index</a></p><hr/>
-
 <h3 id="self-mod">self-modifying code</h3>
 
 <p>The following code modifies itself:</p>
@@ -522,7 +521,7 @@ trying to <a href="http://www.lisp.org/HyperSpec/Body/fun_nconc.html"
 
 <p><a href="#trouble">back to Troubles</a></p><hr/>
 
-<p><a href="#index">index</a></p><hr/>
+<p><a href="#index">top-level index</a></p><hr/>
 
 <table width="100%"><tr><td align="left">
  <a href="http://clisp.cons.org"><img src="clisp.png" width="48"
