http://www.atp-media.de/odbc-cl/odbc.zip http://www.informatimago.com/develop/lisp/ -- UFFI

--- a/resources.html
+++ b/resources.html
@@ -256,6 +256,13 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
   [<a href="http://www.peter-herth.de">Peter Herth</a>]</dt>
  <dd><a href="http://www.peter-herth.de/ltk/"
         >http://www.peter-herth.de/ltk/</a></dd>
+ <dt><strong><a href="http://uffi.b9.com/">UFFI</a></strong>
+  [<a href="http://www.informatimago.com/">Pascal Bourguignon</a>]</dt>
+ <dd><a href="http://www.informatimago.com/develop/lisp/"
+        >http://www.informatimago.com/develop/lisp/</a></dd>
+ <dt><strong>ODBC</strong> [Andreas Thiele]</dt>
+ <dd><a href="http://www.atp-media.de/odbc-cl/odbc.zip"
+        >http://www.atp-media.de/odbc-cl/odbc.zip</a></dd>
 </dl>
 
 <p>See also the
@@ -263,7 +270,8 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
  and the <a href="http://www.lisp.org/table/applications.htm">Lisp
 Applications</a> page at <a href="http://www.lisp.org/">ALU</a>.</p>
 
-<h1 id="related">Related <a href="http://sourceforge.net">SourceForge</a> Projects</h1>
+<h1 id="related">Related
+ <a href="http://sourceforge.net">SourceForge</a> Projects</h1>
 
 <p><a href="http://sourceforge.net/search/?q=lisp">search</a>.</p>
 
