--- a/faq.html
+++ b/faq.html
@@ -280,10 +280,10 @@ promotes charitable donations to Uganda.</p>
     the <code>Subject</code> line</li></ul></dd>
 </dl>
 
-<p>If you do not like this system, please volunteer to maintain the
- mailing lists - you will be required to go through all the <cite>"held
-  for moderator's approval"</cite> mail and approve/discard as
- appropriate at least twice a day.</p>
+<p>If you do not like this policy, please volunteer to maintain the
+ mailing lists - you will be required to go through all the
+ <cite>"held for moderator's approval"</cite> mail and
+ approve/discard as appropriate at least twice a day.</p>
 
 <p><a href="#meta">back to Meta</a></p><hr/>
 
