mention SLIME, link to common-lisp.net for Portable Hemlock

--- a/faq.html
+++ b/faq.html
@@ -332,14 +332,16 @@ head (reasonably recent).</p>
 <p>I use <a href="http://www.gnu.org/software/emacs/">GNU Emacs</a>,
  running CLISP as an "inferior lisp"
  (i.e., CLISP running as an Emacs sub-process).
- Some people prefer <a href="http://ilisp.cons.org/">ILISP</a> to the
- standard Emacs facilities.</p>
+ Some people prefer
+ <a href="http://sourceforge.net/projects/ilisp/">ILISP</a> or
+ <a href="http://www.common-lisp.net/project/slime/">SLIME</a>
+ to the standard Emacs facilities.</p>
 
 <p>See also <a href="http://jabberwocky.sourceforge.net/">Jabberwocky</a>.</p>
 
 <p>See also <a href="http://gclisp.sourceforge.net/">GClisp</a>.</p>
 
-<p>See also <a href="http://www.stud.uni-karlsruhe.de/~unk6/hemlock/"
+<p>See also <a href="http://www.common-lisp.net/project/phemlock/"
  >Portable Hemlock</a>.</p>
 
 <p>See also <a href="http://cl-cookbook.sourceforge.net/windows.html">The
