--- a/wanted.html
+++ b/wanted.html
@@ -83,7 +83,10 @@ Segmentation fault</pre><p><br/></p></li>
   <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/src/zthread.d"><code>src/zthread.d</code></a>,
   <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/src/threads.lisp"><code>src/threads.lisp</code></a>,
   <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/doc/multithread.txt"><code>doc/multithread.txt</code></a>)<p><br/></p></li>
- <li>native compilation<p><br/></p></li>
+ <li>native file compilation (e.g., bytecodes&rarr;C)<p><br/></p></li>
+ <li>native just-in-time compilation
+  (e.g., <a href="http://www.southern-storm.com.au/libjit.html">libjit</a>)
+  <p><br/></p></li>
  <li>compilation to JVM<p><br/></p></li>
  <li>making FFI compatible with
   <a href="http://uffi.med-info.com/">UFFI</a><p><br/></p></li>
