inline Unicode screenshot fibjap-xterm.png

--- a/propaganda.html
+++ b/propaganda.html
@@ -76,11 +76,12 @@
 <p><img src="http://www.unicode.org/webscripts/logo60s2.gif"
         style="float:left" width="34" height="33" alt="[unicode logo]"/>
  CLISP fully supports <a href="http://www.unicode.org">Unicode</a>
- <a href="http://www.unicode.org/unicode/reports/tr28/">3.2</a>.
- Here is a <a href="fibjap.lisp" charset="utf-8">source file</a>
- with Japanese characters in it.
- <a href="fibjap-emacs.png">Edited in GNU Emacs</a>,
- then <a href="fibjap-xterm.png">run in xterm</a>.</p>
+ <a href="http://www.unicode.org/unicode/reports/tr28/">3.2</a>:
+ here is a <a href="fibjap.lisp" charset="utf-8">Lisp file</a>
+ with Japanese characters in it, run in xterm:</p>
+<p class="center"><img alt="Japanese sources run in xterm with CLISP"
+                       src="fibjap-xterm.png" width="507" height="744"/></p>
+ <p>(also <a href="fibjap-emacs.png">edited in GNU Emacs</a>).</p>
 
 <h2>CLISP Performance</h2>
 
