--- a/resources.html
+++ b/resources.html
@@ -263,6 +263,12 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
  <dt><strong>ODBC</strong> [Andreas Thiele]</dt>
  <dd><a href="http://www.atp-media.de/odbc-cl/odbc.zip"
         >http://www.atp-media.de/odbc-cl/odbc.zip</a></dd>
+ <dt><strong>pg-dot-lisp</strong> socket-level interface to the
+  <a href="http://www.postgresql.org/">PostgreSQL</a>
+  object-relational DBMS
+  [<a href=" mailto:emarsden@laas.fr">Eric Marsden</a>]</dt>
+ <dd><a href="http://purl.org/net/emarsden/home/downloads/"
+        >http://purl.org/net/emarsden/home/downloads/</a></dd>
 </dl>
 
 <p>See also the
