--- a/wanted.html
+++ b/wanted.html
@@ -67,14 +67,21 @@ members to recruit new members, with the following incentives:</p>
   (e.g., <a href="http://www.southern-storm.com.au/libjit.html">libjit</a>)
   <p><br/></p></li>
  <li>compilation to JVM<p><br/></p></li>
- <li>making FFI compatible with
-  <a href="http://uffi.med-info.com/">UFFI</a>
+ <li><a href="http://uffi.med-info.com/">UFFI</a> compatibility
+  for CLISP <a href="impnotes.html#dffi">FFI</a>
   (<a href="http://www.informatimago.com/develop/lisp/"> Pascal
    Bourguignon is working on this</a>)<p><br/></p></li>
- <li>adding GUI, e.g., via
-  <a href="http://sourceforge.net/projects/wxlisp/">wxCL</a><p><br/></p></li>
- <li>adding <a href="http://www.openssl.org/">SSL</a> bindings<p><br/></p></li>
+ <li>GUI (e.g.,
+  <a href="http://sourceforge.net/projects/wxlisp/">wxCL</a>)<p><br/></p></li>
+ <li><a href="http://www.openssl.org/">SSL</a> bindings<p><br/></p></li>
 </ol>
+
+<h3 id="rfe">See also</h3>
+
+<ul>
+ <li><a href="http://sourceforge.net/tracker/?group_id=1355&amp;atid=351355"
+        >RFEs</a></li>
+</ul>
 
 <hr/>
 <table width="100%"><tr><td align="left">
