ldap & gnome-config for dirkey

--- a/wanted.html
+++ b/wanted.html
@@ -74,6 +74,10 @@ members to recruit new members, with the following incentives:</p>
  <li>GUI (e.g.,
   <a href="http://sourceforge.net/projects/wxlisp/">wxCL</a>)<p><br/></p></li>
  <li><a href="http://www.openssl.org/">SSL</a> bindings<p><br/></p></li>
+ <li><a href="http://www.openldap.org/">LDAP</a> and
+  <a href="http://developer.gnome.org/doc/API/libgnome/gnome-gnome-config.html"
+     >gnome-config</a> support in
+  <a href="impnotes.html#dir-key">modules/dirkey</a><p><br/></p></li>
 </ol>
 
 <h3 id="rfe">See also</h3>
