http://packages.debian.org/unstable/devel/cl-ssl

--- a/wanted.html
+++ b/wanted.html
@@ -73,7 +73,9 @@ members to recruit new members, with the following incentives:</p>
    Bourguignon is working on this</a>)<p><br/></p></li>
  <li>GUI (e.g.,
   <a href="http://sourceforge.net/projects/wxlisp/">wxCL</a>)<p><br/></p></li>
- <li><a href="http://www.openssl.org/">SSL</a> bindings<p><br/></p></li>
+ <li><a href="http://www.openssl.org/">SSL</a> bindings (note
+  <a href="http://packages.debian.org/unstable/devel/cl-ssl">cl-ssl</a>)
+  <p><br/></p></li>
  <li><a href="http://www.openldap.org/">LDAP</a> and
   <a href="http://developer.gnome.org/doc/API/libgnome/gnome-gnome-config.html"
      >gnome-config</a> support in
