link to VisualCLisp

--- a/faq.html
+++ b/faq.html
@@ -337,6 +337,10 @@ head (reasonably recent).</p>
  <a href="http://www.common-lisp.net/project/slime/">SLIME</a>
  to the standard Emacs facilities.</p>
 
+<p>See also
+ <a href="http://ciapek.uci.agh.edu.pl/~kwlodarc/VisualCLisp/en.htm"
+    >VisualCLisp</a>.</p>
+
 <p>See also <a href="http://jabberwocky.sourceforge.net/">Jabberwocky</a>.</p>
 
 <p>See also <a href="http://gclisp.sourceforge.net/">GClisp</a>.</p>
