clisp-list bans virgins too

--- a/faq.html
+++ b/faq.html
@@ -276,8 +276,8 @@ promotes charitable donations to Uganda.</p>
     (no <code>HTML</code> formatting, no attachments)</li>
    <li>the list address must be in <code>CC</code> or <code>TO</code>,
     not <code>BCC</code>.</li>
-   <li>do not mention <cite>"penis"</cite> or <cite>"viagra"</cite> in
-    the <code>Subject</code> line</li></ul></dd>
+   <li>do not mention <cite>"virgin"</cite>, <cite>"penis"</cite>
+    or <cite>"viagra"</cite> in the <code>Subject</code> line</li></ul></dd>
 </dl>
 
 <p>If you do not like this policy, please volunteer to maintain the
