added gmane links

--- a/faq.html
+++ b/faq.html
@@ -207,12 +207,16 @@ promotes charitable donations to Uganda.</p>
  <dt><strong>CLISP User Mailing List
   <a href="http://lists.sourceforge.net/lists/listinfo/clisp-list"
      >&lt;clisp-list&gt;</a></strong></dt>
+ <dt>AKA <a href="http://news.gmane.org/gmane.lisp.clisp.general">
+   http://news.gmane.org/gmane.lisp.clisp.general</a></dt>
   <dd>This is the right place to ask user-level CLISP-specific questions,
    such as <a href="impnotes.html#image">"how do I save my CLISP
    image?"</a></dd>
  <dt><strong>CLISP Developer Mailing List
   <a href="http://lists.sourceforge.net/lists/listinfo/clisp-devel"
      >&lt;clisp-devel&gt;</a></strong></dt>
+ <dt>AKA <a href="http://news.gmane.org/gmane.lisp.clisp.devel">
+   http://news.gmane.org/gmane.lisp.clisp.devel</a></dt>
   <dd>This is the right place to discuss CLISP internals, submit
    patches, offer help.  You must be subscribed to post.
    If you read this list on <a href="http://gmane.org">Gmane</a> and do
@@ -236,9 +240,8 @@ promotes charitable donations to Uganda.</p>
 <h3 id="mailing-lists">Which mailing lists should I subscribe to?</h3>
 
 <p>Cross-posting in the CLISP mailing lists is very actively discouraged
- and is virtually non-existent, thus you can subscribe to all
- mailing lists that are relevant to you without getting duplicate
- messages:</p>
+ and is virtually non-existent, thus you can subscribe to all mailing
+ lists that are relevant to you without getting duplicate messages:</p>
 <dl>
  <dt><a href="http://lists.sourceforge.net/lists/listinfo/clisp-announce"
         >&lt;clisp-announce&gt;</a></dt>
