--- a/faq.html
+++ b/faq.html
@@ -398,9 +398,9 @@ head (reasonably recent).</p>
 
 <h3 id="rc">Where is the init file on my platform?</h3>
 
-<p>Read the file <code>clisp.html#opt-norc</code> in your distribution
- (this is the version of the <a href="clisp.html">user manual</a> for
- your platform).</p>
+<p>Read the file <code>&lt;clisp.html#opt-norc&gt;</code> in your build
+ directory or binary distribution (this is the version of the <a
+ href="clisp.html">user manual</a> for your platform).</p>
 
 <p><a href="#run">back to Running</a></p><hr/>
 
