--- a/resources.html
+++ b/resources.html
@@ -80,6 +80,7 @@ the job</a> [<a href="http://www.podval.org/~sds/">Sam Steingold</a>]</p>
  <a href="http://www.franz.com/resources/lisp_links.lhtml">and more</a></p>
 
 <p><a href="http://www.alu.org/">The Association of Lisp Users</a>
+ (also <a href="http://alu.cliki.net/index">Wiki</a>)
 [<a href="mailto:webmaster@alu.org">Matt Emerson</a>,
  <a href="mailto:howard@elwood.com">Howard R. Stearns</a>]</p>
 
