--- a/clash.html
+++ b/clash.html
@@ -18,7 +18,7 @@
 <p>Thus document describes how you can make
  <a href="http://clisp.cons.org">CLISP</a> your login
  <a href="http://www.faqs.org/faqs/unix-faq/shell/shell-differences/">shell</a>
- on <a href="http://www.gnu.org">Gnu</a>/<a
+ on <a href="http://www.gnu.org">GNU</a>/<a
  href="http://www.linux.org">Linux</a>.</p>
 
 <p>You can probably use these instructions on other UNIX systems
@@ -39,7 +39,7 @@ too.</p>
 Wood</a></address>
 <p>last modified: 2001-06-01</p>
 
-<p>notes marked "NB from SDS" were added by
+<p>Notes marked <cite>NB from SDS</cite> were added by
  <a href="http://www.podval.org/~sds/">Sam Steingold</a>.</p>
 
 
