link to http://www.divestmentwatch.com/

--- a/faq.html
+++ b/faq.html
@@ -92,8 +92,8 @@ most of them, and some of those questionable decisions were made
 <em>after</em> the alternative behavior have already been implemented in
 CLISP.  The CLISP developers took pains to modify CLISP to
 unconditionally comply with the ANSI spec in all cases
-<a href="impnotes.html#ansi">except those 6 situations where they
- believed that the committee made a mistake</a>,
+<a href="impnotes.html#ansi">except for a handful of situations where
+ they believed that the committee had made a mistake</a>,
 in which cases the committee behavior is <em>still</em> optionally
 available.</p>
 
@@ -134,8 +134,9 @@ Ni&ntilde;o and Sun spots.</p>
 
 <p>Moreover, today, when Jews are being pushed out of the American and
 European academic institutions with various obscene
-<a href="http://how_to_help_israel.tripod.com/Petition.htm">boycott
-campaigns</a>, it is crucial for all of us to stand together against
+<a href="http://how_to_help_israel.tripod.com/Petition.htm">boycott</a>,
+and <a href="http://www.divestmentwatch.com/">divestment</a>
+campaigns, it is crucial for all of us to stand together against
 the resurgence of Nazism.</p>
 
 <p>For more information, please see:</p>
