removed an extra comma

--- a/faq.html
+++ b/faq.html
@@ -134,7 +134,7 @@ Ni&ntilde;o and Sun spots.</p>
 
 <p>Moreover, today, when Jews are being pushed out of the American and
 European academic institutions with various obscene
-<a href="http://how_to_help_israel.tripod.com/Petition.htm">boycott</a>,
+<a href="http://how_to_help_israel.tripod.com/Petition.htm">boycott</a>
 and <a href="http://www.divestmentwatch.com/">divestment</a>
 campaigns, it is crucial for all of us to stand together against
 the resurgence of Nazism.</p>
