added How do I get out of the debugger

--- a/faq.html
+++ b/faq.html
@@ -343,6 +343,7 @@ $ gdb full/lisp.run                       ;; or lisp.exe on windows and cygwin
 <ol>
  <li><a href="#ide">Where is the IDE?</a></li>
  <li><a href="#opt">What are the command line arguments?</a></li>
+ <li><a href="#debugger">How do I get out of the debugger?</a></li>
  <li><a href="#ext">What CLISP extensions are available?</a></li>
  <li><a href="#rc">Where is the init file on my platform?</a></li>
  <li><a href="#modules">Where are the modules with which I built CLISP?</a></li>
@@ -379,6 +380,12 @@ $ gdb full/lisp.run                       ;; or lisp.exe on windows and cygwin
 <h3 id="opt">What are the command line arguments?</h3>
 
 <p><a href="clisp.html">Read The Fine Manual</a>!</p>
+
+<p><a href="#run">back to Running</a></p><hr/>
+
+<h3 id="debugger">How do I get out of the debugger?</h3>
+
+<p><a href="impnotes.html#debugger">Read The Fine Manual</a>!</p>
 
 <p><a href="#run">back to Running</a></p><hr/>
 
